// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.eventsframework.schemas.entity;

option java_multiple_files = true;
option go_package = "970_ng_commons";
import "google/protobuf/wrappers.proto";

message EntityScopeInfo {
  string account_id = 1;
  google.protobuf.StringValue org_id = 2;
  google.protobuf.StringValue project_id = 3;
  string identifier = 4;
}
